# ai-supp-analyzer

./: .env  .env.example  .gitignore  README.md  analyze.py  generate.py  prompts.py  pyproject.toml  qwen3_5.py  requirements.txt  scenarios.py  scheme.py  utils.py
artifacts/datasets/: support_chats.jsonl  support_chats.manifest.json
artifacts/reports/: support_evaluation.json
src/support_analytics/: __init__.py  main.py
src/support_analytics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/support_analytics/application/: __init__.py  config.py  dataset_generator.py  evaluator.py  ports.py  prompts.py  reports.py  scenario_factory.py
src/support_analytics/domain/: __init__.py  enums.py  models.py  scoring.py
src/support_analytics/infrastructure/: __init__.py  gemini_client.py  jsonl_repository.py  llm_factory.py  replay_cache.py
src/support_analytics/interfaces/: __init__.py  cli.py
tests/: test_evaluation_resume.py  test_gemini_error_translation.py  test_gemini_payload_repair.py  test_gemini_retry.py  test_gemini_schema.py  test_generation_resume.py  test_google_genai_fallback.py  test_google_genai_rate_limits.py  test_llm_config.py  test_llm_factory.py  test_scenario_factory.py  test_scoring.py
